# python-pass

./: .gitignore  .travis.yml  Dockerfile  Makefile  README.md  README.rst  docs-requirements.txt  index.html  requirements.txt  setup.cfg  setup.py  tox.ini
completion/: pypass.bash-completion
docs/source/: API.rst  conf.py  index.rst  manpage.rst
pypass/: __init__.py  command.py  entry_type.py  entry_types.py  git_backend.py  password.py  passwordstore.py
pypass/tests/: __init__.py  mock_editor.py  setup_gpg.sh  test_command.py  test_key_2_sec.asc  test_key_sec.asc  test_ownertrust.txt  test_passwordstore.py
