[metadata]
name = pypass
author = Alexandre Viau
author-email = alexandre@alexandreviau.net
home-page = https://github.com/ReAzem/python-pass
description-file = README.rst

[files]
packages = pypass
data_files =
    /etc/bash_completion.d = completion/pypass.bash-completion

[entry_points]
console_scripts =
    pypass = pypass.command:main

